# multi-source-candidate-data-transformer

./: .gitignore  README.md  app.py  candidate_transformer.py  pyproject.toml  requirements.txt
configs/: projection.json  trust_weights.json
data/: adversarial_ats.json  adversarial_sample.csv  notes1.txt  resume1.txt  sample_ats.json
docs/: design.md
examples/: expected_output.json
scripts/: convert_design.py  generate_pdf_design.py
src/candidate_transformer/: __init__.py  cli.py  confidence.py  merger.py  metrics.py  models.py  normalizers.py  parsers.py  pipeline.py  projection.py
tests/: test_confidence.py  test_end_to_end.py  test_flexible_inputs.py  test_merger.py  test_normalizers.py  test_projection.py
